# apiserver/model_configuration.go
@@ -16,8 +16,20 @@ type Configuration struct {
 	// Internal identifier for the configured API (created automatically).
 	Id *int64 `json:"id,omitempty"`
 
-	// There should be things like API address, access keys and so on.
-	ApiAccessChangeMe string `json:"apiAccessChangeMe,omitempty"`
+	// Xovis device username
+	Username string `json:"username,omitempty"`
+
+	// Xovis device pasword
+	Password string `json:"password,omitempty"`
+
+	// Xovis device hostname
+	Hostname string `json:"hostname,omitempty"`
+
+	// Xovis device port
+	Port int32 `json:"port,omitempty"`
+
+	// Specifies whether the device certificate should be verified (should be true for devices publicly accessible, can be false for devices inaccessible from the Internet).
+	CheckCertificate bool `json:"checkCertificate,omitempty"`
 
 	// Flag to enable or disable fetching from this API
 	Enable *bool `json:"enable,omitempty"`
@@ -27,9 +39,6 @@ type Configuration struct {
 
 	// Timeout in seconds
 	RequestTimeout *int32 `json:"requestTimeout,omitempty"`
-
-	// Array of rules combined by logical OR
-	AssetFilter [][]FilterRule `json:"assetFilter,omitempty"`
 
 	// Set to `true` by the app when running and to `false` when app is stopped
 	Active *bool `json:"active,omitempty"`
@@ -43,16 +52,10 @@ type Configuration struct {
 
 // AssertConfigurationRequired checks if the required fields are not zero-ed
 func AssertConfigurationRequired(obj Configuration) error {
-	if err := AssertRecurseInterfaceRequired(obj.AssetFilter, AssertFilterRuleRequired); err != nil {
-		return err
-	}
 	return nil
 }
 
 // AssertConfigurationConstraints checks if the values respects the defined constraints
 func AssertConfigurationConstraints(obj Configuration) error {
-	if err := AssertRecurseInterfaceRequired(obj.AssetFilter, AssertFilterRuleConstraints); err != nil {
-		return err
-	}
 	return nil
 }
